services/job-runner/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-runner
  namespace: tetral-system
  labels:
    app.kubernetes.io/name: job-runner
    app.kubernetes.io/part-of: tetral
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: job-runner
  ports:
    - name: metrics-job
      port: 8081
      targetPort: http-job
